# ProyectoSIG

./: .deepsource.toml  .flake8  .gitignore  .pylintrc  pyproject.toml
.github/: README.md
.github/workflows/: main.yml
src/app/: audio_visual_animation.py  gui.py  textToSpech.py
