[tool.poetry]
name = "proyectosig"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gtts = "^2.4.0"
moviepy = "^1.0.3"
pydub = "^0.25.1"
opencv-python = "^4.8.1.78"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
