[tool.poetry]
name = "proyectosig"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
gtts = "^2.4.0"
moviepy = "^1.0.3"
pydub = "^0.25.1"
opencv-python = "^4.8.1.78"
pyinstaller = "^6.2.0"


[tool.poetry.group.dev.dependencies]
black = { version = "^23.10.1", allow-prereleases = true }
isort = { version = "^5.12.0", extras = [
  "requirements_deprecated_finder",
  "pipfile_deprecated_finder",
] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]

line-length = 120 # override black's default line-length
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | .vscode
  | .history
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.pyright]
useLibraryCodeForTypes = true
typeCheckingMethod = "basic"
pythonVersion = "3.11.0"
flake8 = "^4.0.1"


[tool.isort]
# make it compatible with black
profile = "black"
